syntax = "proto3";

//import "google/api/annotations.proto";
//import "google/protobuf/empty.proto";  
//import "google/protobuf/Timestamp.proto";

option csharp_namespace= "GrpcShared";

package protos.greet;

service GreeteProtoService {
  rpc SayHello (HelloRequest) returns (HelloReply) {
  }
  rpc SayHelloFrom (HelloRequestFrom) returns (HelloReply) {
  }
}

message HelloRequest {
  string name = 1;
}

message HelloRequestFrom {
  string name = 1;
  string from = 2;
}

message HelloReply {
  string message = 1;
}