using Grpc.Core;
using GrpcShared;

namespace GrpcServerDemo.Services;


public class GreeterService : GreeteProtoService.GreeteProtoServiceBase
{
    private readonly ILogger<GreeterService> _logger;
    public GreeterService(ILogger<GreeterService> logger)
    {
        _logger = logger;
    }

    public override Task<HelloReply> SayHello(HelloRequest request, ServerCallContext context)
    {
        return Task.FromResult(new HelloReply
        {
            Message = "Hello " + request.Name
        });
    }
}
